fix(login): fix scrollbar on login page

--- a/Frontend/src/styles/tailwind.scss
+++ b/Frontend/src/styles/tailwind.scss
@@ -21,14 +21,6 @@
     }
 }
 
-.login input {
-    @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5;
-}
-
-.default-h1 {
-    @apply font-medium leading-tight text-5xl mt-0 mb-2 text-blue-600;
-}
-
 .create-table-modal {
     input {
         border-bottom: solid black 1px;
